[domain] add methods to get sources and scenarios lists by domain; update schema for scenario - add field context_size; [api] add list sources/scenarios by domain methods;
