# api/internal/api/scenario/handler/list_scenarios_by_domain.go
@@ -9,31 +9,38 @@ import (
 	"github.com/yogenyslav/pkg/errs"
 )
 
-// ListScenarios godoc
+// ListScenariosByDomain godoc
 //
-//	@Summary		List scenarios.
-//	@Description	List scenarios created by user.
+//	@Summary		List scenarios by domain.
+//	@Description	List scenarios by domain.
 //	@Tags			scenario
 //	@Accept			json
 //	@Produce		json
 //	@Security		ApiKeyAuth
 //	@Param			offset	query		uint						true	"Pagination offset"
 //	@Param			limit	query		uint						true	"Pagination limit"
+//	@Param			id		path		int64						true	"Domain ID"
 //	@Success		200		{object}	pb.ListScenariosResponse	"List of scenarios"
 //	@Failure		400		{object}	string						"Failed to list scenarios"
-//	@Router			/api/v1/scenario/list [get]
-func (h *Handler) ListScenarios(c *fiber.Ctx) error {
+//	@Router			/api/v1/scenario/list_by_domain/{id} [get]
+func (h *Handler) ListScenariosByDomain(c *fiber.Ctx) error {
 	offset := c.QueryInt(offsetParam, 0)
 	limit := c.QueryInt(limitParam, 10)
 	if offset < 0 || limit < 0 {
 		return errs.WrapErr(shared.ErrInvalidParams, fmt.Sprintf("offset=%d, limit=%d", offset, limit))
 	}
 
-	req := pb.ListScenariosRequest{
-		Offset: uint64(offset),
-		Limit:  uint64(limit),
+	domainID, err := c.ParamsInt(domainIDParam)
+	if err != nil {
+		return errs.WrapErr(shared.ErrInvalidParams, fmt.Sprintf("invalid domain ID: %s", err.Error()))
 	}
-	resp, err := h.scenarioService.ListScenarios(c.UserContext(), &req)
+
+	req := pb.ListScenariosByDomainRequest{
+		DomainId: int64(domainID),
+		Offset:   uint64(offset),
+		Limit:    uint64(limit),
+	}
+	resp, err := h.scenarioService.ListScenariosByDomain(c.UserContext(), &req)
 	if err != nil {
 		return errs.WrapErr(shared.ErrListScenarios, err.Error())
 	}
