# api/internal/api/source/module.go
@@ -10,6 +10,7 @@ type sourceHandler interface {
 	UpdateSource(c *fiber.Ctx) error
 	DeleteSource(c *fiber.Ctx) error
 	ListSources(c *fiber.Ctx) error
+	ListSourcesByDomain(c *fiber.Ctx) error
 	GetPermittedUsers(c *fiber.Ctx) error
 	GetPermittedRoles(c *fiber.Ctx) error
 	UpdatePermittedUsers(c *fiber.Ctx) error
@@ -20,6 +21,7 @@ type sourceHandler interface {
 func SetupRoutes(api fiber.Router, h sourceHandler) {
 	api.Post("/", h.CreateSource)
 	api.Get("/list", h.ListSources)
+	api.Get("/list_by_domain/:id", h.ListSourcesByDomain)
 	api.Get("/permissions/users/:id", h.GetPermittedUsers)
 	api.Get("/permissions/roles/:id", h.GetPermittedRoles)
 	api.Put("/permissions/users/:id", h.UpdatePermittedUsers)
